tests/org.eclipse.php.core.tests/workspace/errors/unfinishedInterfaceDecl2.pdtt
--TEST--
Test unfinished interface declaration error reporting
--FILE--
<?php
interface I extends R, {}
?>
--EXPECT--
[line=2, start=29, end=30] syntax error, unexpected '{', expecting 'identifier'